gcc/testsuite/rust/rustc/ui/imports/extern-crate-self/extern-crate-self-fail.rs
extern crate self; // { dg-error "" "" { target *-*-* } }

#[macro_use] // { dg-error "" "" { target *-*-* } }
extern crate self as foo;

fn main() {}

